syntax = "proto3";

option csharp_namespace = "WebApi";

service ProtoProfileService {
	rpc AddProfile (AddProfileRequest) returns (AddProfileResponse);
	rpc AddEmptyProfile (AddEmptyProfileRequest) returns (AddProfileResponse);
	rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
	rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
}

message AddProfileRequest {
	string userid = 1;
	string firstName = 2;
	string lastName = 3;
	string email = 4;
	string phone = 5;
	string street = 6;
	string zipCode = 7;
	string city = 8;
	string state = 9;
	string country = 10;
}
message AddEmptyProfileRequest {
	string userId = 1;
}

message AddProfileResponse {
	bool success = 1;
	string message = 2;
}

message GetProfileRequest {
	string userId = 1;
}
message GetProfileResponse {
	bool success = 1;
	string message = 2;
	string firstName = 3;
	string lastName = 4;
	string email = 5;
	string phone = 6;
	string street = 7;
	string zipCode = 8;
	string city = 9;
	string state = 10;
	string country = 11;
	string imageUrl = 12;
}

message UpdateProfileRequest {
	string userId = 1;
	bool success = 2;
	string message = 3;
	string firstName = 4;
	string lastName = 5;
	string email = 6;
	string phone = 7;
	string street = 8;
	string zipCode = 9;
	string city = 10;
	string state = 11;
	string country = 12;
	string imageUrl = 13;
}
message UpdateProfileResponse {
	bool success = 1;
	string message = 2;
}